tests/cases/errors/013_equals_in_key.nesl
<<<<<<<<<nesl
{
  valid_key = R"""pv(this is fine)pv"""
  bad=key = R"""pv(equals in key name)pv"""
  another = R"""pv(also valid)pv"""
}
=========nesl